--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "react-toastify": "^8.2.0"
   },
   "scripts": {
-    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
