--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,9 @@
   "name": "event-finder-frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.20.2"
+  },
   "dependencies": {
     "@apollo/client": "^3.13.8",
     "axios": "^1.7.2",
